@startuml

hide empty members
allowmixing

title "Дисциплины"

class DisciplineService

interface DisciplineRepository

class Discipline {
    + id: Int
    + title: String
    + parentId: Int
}

Discipline <.. DisciplineRepository

'class DisciplineRepositoryImpl implements DisciplineRepository
'class DisciplineEntity
'DisciplineRepositoryImpl .> DisciplineEntity

DisciplineService .> Discipline
DisciplineService ..> DisciplineRepository



@enduml